# lib/api-spec/openapi.yaml
@@ -2245,6 +2245,12 @@ components:
     UpdateClientRequest:
       type: object
       properties:
+        name:
+          type: string
+          nullable: true
+        phone:
+          type: string
+          nullable: true
         birthDate:
           type: string
           nullable: true
